update the code logic, not to save items duplicated, not save a null or empty string into db